done with intro section

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <title>Document</title>
   </head>
   <body>
-    <ul>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#work">Work</a></li>
-      <li><a href="#about">About</a></li>
-    </ul>
+    <nav>
+      <ul>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    </nav>
+    <section class="intro">
+      <h1 class="hey">Hey I am Haseeb</h1>
+      <p class="web">a wordpress developer</p>
+    </section>
   </body>
 </html>
