--- a/index.html
+++ b/index.html
@@ -19,5 +19,17 @@
       <h1 class="hey">Hey I am Haseeb</h1>
       <p class="web">a wordpress developer</p>
     </section>
+    <footer>
+      <p>
+        **This is just a fake portfolio. All the projects and contact details
+        given are not real.
+      </p>
+      <p>
+        &copy; Created for
+        <a href="https://www.freecodecamp.com/" target="_blank"
+          >freeCodeCamp <i class="fab fa-free-code-camp"></i
+        ></a>
+      </p>
+    </footer>
   </body>
 </html>
