done with contact us section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link href="style.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -17,9 +25,43 @@
     </nav>
     <section class="intro">
       <h1 class="hey">Hey I am Haseeb</h1>
-      <p class="web">a wordpress developer</p>
+      <p class="web">a web developer</p>
     </section>
-
+    <section id="contact" class="contact-section">
+      <div class="contact1">
+        <h2>Let's work together...</h2>
+        <p>How do you take your coffee?</p>
+      </div>
+      <div class="contact2">
+        <a
+          href="https://facebook.com/freecodecamp"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fa fa-facebook"></i
+        ></a>
+        <a
+          id="profile-link"
+          href="https://github.com/freecodecamp"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fa fa-github"></i
+        ></a>
+        <a
+          href="https://twitter.com/freecodecamp"
+          target="_blank"
+          class="btn contact-details"
+          ><i class="fa fa-twitter"></i
+        ></a>
+        <a
+          href="/cdn-cgi/l/email-protection#7a1f021b170a161f3a1f021b170a161f54191517"
+          class="btn contact-details"
+          ><i class="fa fa-google"></i
+        ></a>
+        <a href="tel:555-555-5555" class="btn contact-details"
+          ><i class="fa fa-phone"></i
+        ></a>
+      </div>
+    </section>
     <footer>
       <p>
         **This is just a fake portfolio. All the projects and contact details
