--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <li><a href="#about">About</a></li>
       </ul>
     </nav>
-    <section class="intro">
+    <section id="about" class="intro">
       <h1 class="hey">Hey I am Haseeb</h1>
       <p class="web">a web developer</p>
     </section>
-    <section class="projects" id="projects-section">
+    <section class="projects" id="work">
       <h2 class="projects-section-header">These are some of my projects</h2>
 
       <div class="projects-grid">
