added slider in projects section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h1 class="hey">Hey I am Haseeb</h1>
       <p class="web">a web developer</p>
     </section>
-    <section class="projects" id="work">
+    <section class="projects" style="height: 950px" id="work">
       <h2 class="projects-section-header">These are some of my projects</h2>
 
       <!-- <div class="projects-grid">
@@ -115,35 +115,64 @@
       ></a> -->
 
       <div class="slideshow-container">
-        <div class="mySlides fade">
-          <div class="numbertext">1 / 3</div>
-          <img
-            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
-            style="width: 100%"
-          />
-          <div class="text">Caption Text</div>
-        </div>
+        <div class="slide-box">
+          <div class="mySlides fade">
+            <img
+              src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+              style="width: 100%"
+            />
 
-        <div class="mySlides fade">
-          <div class="numbertext">2 / 3</div>
-          <img
-            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png"
-            style="width: 100%"
-          />
-          <div class="text">Caption Two</div>
-        </div>
+            <div class="project-title">Tribute Page</div>
+          </div>
 
-        <div class="mySlides fade">
-          <div class="numbertext">3 / 3</div>
-          <img
-            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"
-            style="width: 100%"
-          />
-          <div class="text">Caption Three</div>
-        </div>
+          <div class="mySlides fade">
+            <img
+              src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png"
+              style="width: 100%"
+            />
 
-        <a class="prev" onclick="plusSlides(-1)">❮</a>
-        <a class="next" onclick="plusSlides(1)">❯</a>
+            <div class="project-title">Random Quote Machine</div>
+          </div>
+
+          <div class="mySlides fade">
+            <img
+              src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"
+              style="width: 100%"
+            />
+
+            <div class="project-title">JavaScript Calculator</div>
+          </div>
+
+          <div class="mySlides fade">
+            <img
+              src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"
+              style="width: 100%"
+            />
+
+            <div class="project-title">Map Data Across the Globe</div>
+          </div>
+
+          <div class="mySlides fade">
+            <img
+              src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png"
+              style="width: 100%"
+            />
+
+            <div class="project-title">Wikipedia Viewer</div>
+          </div>
+
+          <div class="mySlides fade">
+            <img
+              src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png"
+              style="width: 100%"
+            />
+
+            <div class="project-title">Tic Tac Toe Game</div>
+          </div>
+
+          <a class="prev" onclick="plusSlides(-1)">❮</a>
+          <a class="next" onclick="plusSlides(1)">❯</a>
+        </div>
       </div>
       <br />
 
@@ -151,6 +180,9 @@
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+        <span class="dot" onclick="currentSlide(6)"></span>
       </div>
     </section>
     <section id="contact" class="contact-section">
